--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../assets/css/material-kit.css" rel="stylesheet"/>
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/material-kit.css" rel="stylesheet"/>
 
 </head>
 
@@ -71,7 +71,7 @@
 
     <div class="wrapper">
 	
-        <div class="header header-filter" style="background-image: url('../assets/img/landing7.jpg');">
+        <div class="header header-filter" style="background-image: url('assets/img/landing7.jpg');">
             <div class="container">
                 <div class="row">
 					<div class="col-md-6">
@@ -217,7 +217,7 @@
 						<div class="row">
 							<div class="col-md-4">
 			                    <div class="team-player">
-			                        <img src="../assets/img/larrypage.jpg" alt="Thumbnail Image" class="img-raised img-circle">
+			                        <img src="assets/img/larrypage.jpg" alt="Thumbnail Image" class="img-raised img-circle">
 			                        <h4 class="title">Larry Page <br />
 										<small class="text-muted">Businessman</small>
 									</h4>
@@ -229,7 +229,7 @@
 			                </div>
 			                <div class="col-md-4">
 			                    <div class="team-player">
-			                        <img src="../assets/img/sundarpichai.jpg" alt="Thumbnail Image" class="img-raised img-circle">
+			                        <img src="assets/img/sundarpichai.jpg" alt="Thumbnail Image" class="img-raised img-circle">
 			                        <h4 class="title">Sundar Pichai<br />
 										<small class="text-muted">Business Executive</small>
 									</h4>
@@ -241,7 +241,7 @@
 
 				<div class="col-md-4">
 			                    <div class="team-player">
-			                        <img src="../assets/img/sergeybrin.jpg" alt="Thumbnail Image" class="img-raised img-circle">
+			                        <img src="assets/img/sergeybrin.jpg" alt="Thumbnail Image" class="img-raised img-circle">
 			                        <h4 class="title">Sergey Brin<br />
 										<small class="text-muted">Business Executive</small>
 									</h4>
@@ -418,17 +418,17 @@
 </body>
 
 	<!--   Core JS Files   -->
-	<script src="../assets/js/jquery.min.js" type="text/javascript"></script>
-	<script src="../assets/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="../assets/js/material.min.js"></script>
+	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="assets/js/material.min.js"></script>
 
 	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-	<script src="../assets/js/nouislider.min.js" type="text/javascript"></script>
+	<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
 
 	<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-	<script src="../assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+	<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
 
 	<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-	<script src="../assets/js/material-kit.js" type="text/javascript"></script>
+	<script src="assets/js/material-kit.js" type="text/javascript"></script>
 
 </html>
