--- a/Index.html
+++ b/Index.html
@@ -268,7 +268,7 @@
 		
 		<div class="container">
 				<div class="row">
-					<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+					<div class="col-md-12  col-sm-12 ">
 						<div class="card card-signup">
 							<form class="form" method="" action="">
 							
