Reg form updated

--- a/Index.html
+++ b/Index.html
@@ -260,7 +260,7 @@
 			<!-- registration form -->
 	<div class="section landing-section">
 	                <div class="row">
-	                    <div class="col-md-8 col-md-offset-2">
+	                    <div class="col-md-12 ">
 	                        <h2 class="text-center title" id="register">REGISTER</h2>
 		<h4 class="text-center description">The event is open to high school students only.</h4>
 	                       
@@ -268,7 +268,7 @@
 		
 		<div class="container">
 				<div class="row">
-					<div class="col-md-12  col-sm-12 ">
+					<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
 						<div class="card card-signup">
 							<form class="form" method="" action="">
 							
