--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,19 @@
 	<!-- CSS Files -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/css/material-kit.css" rel="stylesheet"/>
+	<style>
+	.card-signup *{
+		color:#fff !important;
+	}
+	label {
+		 color: #fff !important;
+	}
+	/* label underline focus color */
+	   .input-field input[type=text]:focus {
+		 border-bottom: 1px solid #fff;
+		 box-shadow: 0 1px 0 0 #fff;
+	   }
+	</style>
 
 </head>
 
