Reg form updated

--- a/Index.html
+++ b/Index.html
@@ -22,8 +22,17 @@
 	.card-signup *{
 		color:#fff !important;
 	}
-	label {
-		 color: #fff !important;
+	::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+	  color: #fff !important;
+	}
+	::-moz-placeholder { /* Firefox 19+ */
+	  color: #fff !important;
+	}
+	:-ms-input-placeholder { /* IE 10+ */
+	  color: #fff !important;
+	}
+	:-moz-placeholder { /* Firefox 18- */
+	  color: #fff !important;
 	}
 	/* label underline focus color */
 	   .input-field input[type=text]:focus {
