Reg form updated

--- a/Index.html
+++ b/Index.html
@@ -34,6 +34,9 @@
 	:-moz-placeholder { /* Firefox 18- */
 	  color: #fff !important;
 	}
+	input::placeholder {
+		color:#fff !important;
+	}
 	/* label underline focus color */
 	   .input-field input[type=text]:focus {
 		 border-bottom: 1px solid #fff;
