--- a/Index.html
+++ b/Index.html
@@ -42,6 +42,9 @@
 		 border-bottom: 1px solid #fff;
 		 box-shadow: 0 1px 0 0 #fff;
 	   }
+	   .btn-white{
+		color:#000 !important;
+		}
 	</style>
 
 </head>
@@ -331,7 +334,7 @@
 									
 								</div>
 								<div class="footer text-center">
-									<a href="#pablo" class="btn btn-simple btn-primary btn-lg">Get Started</a>
+									<a href="#pablo" class="btn btn-white btn-lg">Get Started</a>
 								</div>
 							</form>
 						</div>
