Reg form updated

--- a/Index.html
+++ b/Index.html
@@ -334,7 +334,7 @@
 									
 								</div>
 								<div class="footer text-center">
-									<a href="#pablo" class="btn btn-white btn-lg">Get Started</a>
+									<a href="#pablo" class="btn btn-white btn-lg">Register</a>
 								</div>
 							</form>
 						</div>
